# BarkEm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.example.yaml
src/barkem/: __init__.py  logging.py
src/barkem/api/: __init__.py  __main__.py  app.py  schemas.py  service.py  webhook.py
src/barkem/bot/: __init__.py  barkem.py  child.py  lobby.py  match_monitor.py  match_orchestrator.py  match_starter.py  orchestrator.py  pause_handler.py  placement.py  results_builder.py  roster_waiter.py  scoreboard_reader.py
src/barkem/comms/: __init__.py  redis_channel.py
src/barkem/config/: __init__.py  settings.py
src/barkem/input/: __init__.py  controller.py  keyboard.py  navigator.py  window.py
src/barkem/tools/: __init__.py  calibrate.py  create_and_place.py  create_lobby.py  gamepad_test.py  highlight_watch.py  keyboard_gamepad.py  main.py  match_chat_watch.py  match_watch.py  place_teams.py  ready_watch.py  scoreboard_read.py  start_match.py  state_watch.py
src/barkem/vision/: __init__.py  capture.py  chat.py  debug.py  highlight.py  lobby_reader.py  ocr.py  regions.py  state_detector.py  templates.py
tests/: __init__.py  test_setup.py
