[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barkem"
version = "0.1.0"
description = "Automated private match orchestration for The Finals"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["the-finals", "game-automation", "computer-vision", "tournament-tools", "esports"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "dxcam>=0.3.0; sys_platform == 'win32'",
    "opencv-python>=4.10.0",
    "pytesseract>=0.3.10",
    "numpy>=1.24.0",
    "vgamepad>=0.1.0; sys_platform == 'win32'",
    "evdev>=1.7.0; sys_platform == 'linux'",
    "keyboard>=0.13.5",
    "pywin32>=306; sys_platform == 'win32'",
    "python-statemachine>=2.3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/barkem"
Repository = "https://github.com/yourusername/barkem"
Issues = "https://github.com/yourusername/barkem/issues"

[project.scripts]
barkem = "barkem.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
